--- a/Lexer/Helper/CMakeLists.txt
+++ b/Lexer/Helper/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(MollenLexer VERSION 1.0 DESCRIPTION "MollenLexer")
+project(MollenHelper VERSION 1.0 DESCRIPTION "MollenHelpers")
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
@@ -9,9 +9,4 @@ if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Debug)
 endif()
 
-
-add_subdirectory(Scanner)
-
-add_subdirectory(Helper)
-
-add_library(Lexer Lexer.cpp Lexer.h)
+add_library(Helper Helper.cpp Helper.h)
